--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   Welcome to MathHelp Network's page
   <script src="script.js"></script>
 
-  <b>Banner #4</b><br>
-  <img src="https://discordapp.com/api/guilds/540630552609554453/widget.png?style=banner4" alt="">
-  
+  <b>Join Here</b><br>
+  <img src="https://discordapp.com/api/guilds/540630552609554453/widget.png?style=banner4" href="https://discord.gg/4ScYmeU4Mh">
+
 </section>
 </body>
 
