--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   Welcome to MathHelp Network's page
   <script src="script.js"></script>
 
-  <b>Join Here</b><br>
-  <img src="https://discordapp.com/api/guilds/540630552609554453/widget.png?style=banner4" href="https://discord.gg/4ScYmeU4Mh">
-
+  <iframe src="https://discord.com/widget?id=976655852373180416&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 </section>
 </body>
 
