--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
   Welcome to MathHelp Network's page
   <script src="script.js"></script>
-
-  <iframe src="https://discord.com/widget?id=976655852373180416&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+  <iframe src="https://discord.com/widget?id=976655852373180416&theme=dark" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 </section>
 </body>
 
