--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
-  Welcome to MathHelp Network's page
+ <p1> Welcome to MathHelp Network's page! </p1>
   <p></p>
   <script src="script.js"></script>
+ <a href= https://discord.gg/4ScYmeU4Mh> <img src="https://st.depositphotos.com/1842905/1682/v/600/depositphotos_16826945-stock-illustration-vector-button-click-here.jpg" width="50" height="50"> </a>
+  <p></p>
   <iframe src="https://discord.com/widget?id=976655852373180416&theme=dark" width="450" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 </section>
 </body>
